# seshy

./: CLAUDE.md  Makefile  README.md  install.sh  pyproject.toml
.beads/: issues.jsonl
.claude/skills/bead-mail-sam-workflow/: SKILL.md
.claude/skills/sprint-setup/: SKILL.md
.sam/sprint/sprint-1/: requirements.yaml  state.yaml
.sam/sprint/sprint-1/features/archive-scripts/: plan.md  research.md
.sam/sprint/sprint-1/features/config-module/: state.yaml
.sam/sprint/sprint-1/features/update-fzf/: requirements.yaml
docs/: CODEBASE_MAP.md
specs/: spec.migrate-functions-sh.md  spec.seshy.md
src/seshy/: __init__.py  cli.py  config.py  fzf.py  toml_ops.py  ui.py  utils.py
src/seshy/shell/: functions.sh
src/seshy/workflows/: __init__.py  add.py  archive.py  delete.py  startup.py
