[project]
name = "seshy"
version = "0.1.0"
description = "CLI for managing sesh.toml tmux sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "tomlkit>=0.12",
]

[project.scripts]
seshy = "seshy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seshy"]
