[project]
name = "seshy"
version = "0.1.1"
description = "CLI for managing sesh.toml tmux sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "tomlkit>=0.12",
]

[project.scripts]
seshy = "seshy.cli:main"

[build-system]
requires = ["uv_build>=0.10.3"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.4.0", "ty"]

[tool.uv.sources]
seshy = { path = "src/seshy" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
